Slight adjustements to VSEM test cases and to notation

--- a/vsem_calibration_tests/vsem_test_cases.Rmd
+++ b/vsem_calibration_tests/vsem_test_cases.Rmd
@@ -40,8 +40,8 @@ source("mcmc_calibration_functions.r")
 
 $$
 \begin{align*}
-\dot{C}_v(t) &= \alpha_v \times \text{NPP}(t) - \frac{C_v(t)}{\tau_v} \\
-\dot{C}_r(t) &= (1.0 - \alpha_v) \times \text{NPP}(t) - \frac{C_r(t)}{\tau_r} \\
+\dot{C}_v(t) &= \alpha_v \times \text{NPP}(t; C_v) - \frac{C_v(t)}{\tau_v} \\
+\dot{C}_r(t) &= (1.0 - \alpha_v) \times \text{NPP}(t; C_v) - \frac{C_r(t)}{\tau_r} \\
 \dot{C}_s(t) &= \frac{C_r(t)}{\tau_r} + \frac{C_v(t)}{\tau_v} - \frac{C_s(t)}{\tau_s} 
 \end{align*}
 $$
@@ -54,9 +54,9 @@ VSEM is driven by Photosynthetically Active Radiation (PAR) (MJ/$m^2$/day). GPP 
 * The rate at which the available light decays as it passes downwards through a canopy of leaves (described by the Beer-Lambert Law). 
 $$
 \begin{align*}
-\text{LAI}(t) &= \text{LAR} \times C_v(t) \\
-\text{GPP}(t) &= \text{PAR}(t) \times \text{LUE} \times \left(1 -  \exp\left(-k \times \text{LAI}(t) \right) \right) \\
-\text{NPP}(t) &= (1 - \gamma) \times \text{GPP}(t)
+\text{LAI}(t; C_v) &= \text{LAR} \times C_v(t) \\
+\text{GPP}(t; C_v) &= \text{PAR}(t) \times \text{LUE} \times \left(1 -  \exp\left(-k \times \text{LAI}(t; C_v) \right) \right) \\
+\text{NPP}(t; C_v) &= (1 - \gamma) \times \text{GPP}(t; C_v)
 \end{align*}
 $$
 
@@ -79,6 +79,11 @@ print(test1_list$ref_pars)
 ```{r, echo = FALSE}
 print("Observation Covariance: ")
 print(test1_list$Sig_eps)
+```
+
+```{r, echo = FALSE}
+print("Observation frequency: ")
+print(test1_list$output_frequencies)
 ```
 
 ### Plots of Simulated Observational Data and VSEM outputs.
@@ -109,6 +114,11 @@ print("Observation Covariance: ")
 print(test2_list$Sig_eps)
 ```
 
+```{r, echo = FALSE}
+print("Observation frequency: ")
+print(test2_list$output_frequencies)
+```
+
 ```{r echo = FALSE}
 for(output_var in test2_list$output_vars) {
  plotTimeSeries(observed = test2_list$data_obs[, output_var],
@@ -132,6 +142,11 @@ print(test3_list$ref_pars)
 ```{r, echo = FALSE}
 print("Observation Covariance: ")
 print(test3_list$Sig_eps)
+```
+
+```{r, echo = FALSE}
+print("Observation frequency: ")
+print(test3_list$output_frequencies)
 ```
 
 ```{r echo = FALSE}
@@ -159,6 +174,11 @@ print("Observation Covariance: ")
 print(test4_list$Sig_eps)
 ```
 
+```{r, echo = FALSE}
+print("Observation frequency: ")
+print(test4_list$output_frequencies)
+```
+
 ```{r echo = FALSE}
 for(output_var in test4_list$output_vars) {
  plotTimeSeries(observed = test4_list$data_obs[, output_var],
@@ -170,10 +190,10 @@ for(output_var in test4_list$output_vars) {
 I suppose there are really two questions here: 1.) developing error metrics to use in tests when the likelihood parameters are known and 
 2.) developing error metrics that can be used in practice to evaluate the emulator fit. Though we are emulating the sum of squared errors $T(\theta)$ 
 (or its log $L(\theta)$) what we are really interested in is the effect of the emulator approximation on the posterior distribution 
-$$\pi(\theta) \propto \pi_0(\theta)p(Y|\theta) = \pi_0(\theta)L(\theta) = \pi_0(\theta)\prod_{j = 1}^{p} N_{N_j}(Y_j|f_j(\theta), \sigma_j^2 I_{N_j})$$
+$$\pi(\theta) \propto \pi_0(\theta)p(Y|\theta) = \pi_0(\theta)\mathcal{L}(\theta) = \pi_0(\theta)\prod_{j = 1}^{p} \mathcal{N}_{N_j}(Y_j|f_j(\theta), \sigma_j^2 I_{N_j})$$
 Note that I've started writing $N_j$ to specify that sample sizes may be different across outputs, given the fact that significant data imbalances are something we will have to be thinking about. 
 
-In particular, the posterior approximation $\hat{\pi}(\theta) \propto \pi_0(\theta)\hat{L}(\theta)$ is utilized in the MCMC calibration algorithm in two places. 
+In particular, the posterior approximation $\hat{\pi}(\theta) \propto \pi_0(\theta)\hat{\mathcal{L}}(\theta)$ is utilized in the MCMC calibration algorithm in two places. 
 
 1. The Accept-Reject ratio in Metropolis-Hastings.
 2. Sampling from an Inverse Gamma in the Gibbs update for the observation variance.  
@@ -182,8 +202,8 @@ I briefly review this below.
 
 ## Review of MCMC scheme
 We assume priors 
-$$\sigma_j^2 \overset{ind}{\sim} IG(a_j, b_j)$$
-which results in a conditional posterior $p(\sigma_j^2|\theta, Y) = IG(\sigma_j^2|a_j + N_j/2, b_j + T_j(\theta)/2)$ and thus the opportunity for a Metropolis-within-Gibbs scheme. 
+$$\sigma_j^2 \overset{ind}{\sim} \mathcal{IG}(a_j, b_j)$$
+which results in a conditional posterior $p(\sigma_j^2|\theta, Y) = \mathcal{IG}(\sigma_j^2|a_j + N_j/2, b_j + T_j(\theta)/2)$ and thus the opportunity for a Metropolis-within-Gibbs scheme. 
 
 ### Updating $\theta$
 Conditional on $\Sigma := \text{diag}(\sigma_1^2, \dots, \sigma_p^2)$, the Metropolis step for updating $\theta$ results in an acceptance ratio (where $q(\cdot, \cdot)$ is the proposal density), 
@@ -191,39 +211,44 @@ $$
 \begin{align*}
 \alpha(\theta, \theta^\prime) &= \frac{p(\theta^\prime|Y, \Sigma)q(\theta^\prime, \theta)}{p(\theta|Y, \Sigma)q(\theta, \theta^\prime)} \\
                               &= \frac{\pi_0(\theta^\prime)p(Y|\theta^\prime, \Sigma)q(\theta^\prime, \theta)}{\pi_0(\theta)p(Y|\theta, \Sigma)q(\theta, \theta^\prime)} \\
-                              &= \frac{\pi_0(\theta^\prime)q(\theta^\prime, \theta) \prod_{j = 1}^{p} N_{N_j}(Y_j|f_j(\theta^\prime), \sigma_j^2 I_{N_j})}{\pi_0(\theta)q(\theta, \theta^\prime) \prod_{j = 1}^{p} N_{N_j}(Y_j|f_j(\theta), \sigma_j^2 I_{N_j})} \\
+                              &= \frac{\pi_0(\theta^\prime)q(\theta^\prime, \theta) \prod_{j = 1}^{p} \mathcal{N}_{N_j}(Y_j|f_j(\theta^\prime), \sigma_j^2 I_{N_j})}{\pi_0(\theta)q(\theta, \theta^\prime) \prod_{j = 1}^{p} \mathcal{N}_{N_j}(Y_j|f_j(\theta), \sigma_j^2 I_{N_j})} \\
                               &= \frac{\pi_0(\theta^\prime)q(\theta^\prime, \theta)}{\pi_0(\theta)q(\theta, \theta^\prime)}\prod_{j = 1}^{p} \exp\left\{-\frac{1}{2\sigma_j^2} (T_j(\theta^\prime) - T_j(\theta))\right\} \\
                               &= \frac{\pi_0(\theta^\prime)q(\theta^\prime, \theta)}{\pi_0(\theta)q(\theta, \theta^\prime)} \exp\left\{ -\frac{1}{2} \sum_{j = 1}^{p} \left(\frac{T_j(\theta^\prime) - T_j(\theta)}{\sigma_j^2}\right)\right\}
 \end{align*}
 $$
-The current PEcAn approach is to approximate $\alpha(\theta, \theta^\prime)$ by sampling from the GP emulator
+I will denote the predictive distribution of the GP using asterisks, as $T^* \sim \mathcal{GP}(\mu^*, k^*)$ or likelwise for the log L2 error $L^*$. The current PEcAn approach is to approximate $\alpha(\theta, \theta^\prime)$ by sampling from the GP emulator
 
 $$
 \begin{align*}
-&\tilde{T}_j^\prime \sim N(\mu^*_j(\theta^\prime), k_j^*(\theta^\prime)) \\
-&\tilde{T}_j \sim N(\mu^*_j(\theta), k_j^*(\theta))
+&\tilde{T}_j^\prime \sim \mathcal{N}(\mu^*_j(\theta^\prime), k_j^*(\theta^\prime)) \\
+&\tilde{T}_j \sim \mathcal{N}(\mu^*_j(\theta), k_j^*(\theta))
 \end{align*}
 $$
+
 and then replacing $T_j(\theta^\prime)$ and $T_j(\theta)$ with $\tilde{T}_j^\prime$ and $\tilde{T}_j$, respectively. We have also discussed accounting for GP predictive covariance by drawing these samples jointly 
 $$
-\begin{pmatrix}T_j(\theta^\prime) \\ T_j(\theta) \end{pmatrix} \sim N_2\left(\mu_j^*\begin{pmatrix} \theta^\prime \\ \theta\end{pmatrix}, k_j^*\begin{pmatrix} \theta^\prime \\ \theta\end{pmatrix} \right)
+\begin{pmatrix}T_j(\theta^\prime) \\ T_j(\theta) \end{pmatrix} \sim \mathcal{N}_2\left(\mu_j^*\begin{pmatrix} \theta^\prime \\ \theta\end{pmatrix}, k_j^*\begin{pmatrix} \theta^\prime \\ \theta\end{pmatrix} \right)
 $$
+
 Note that a deterministic, rather than a sampling-based approach is also possible here since we know the distribution
-$$T^*_j(\theta^\prime) - T^*_j(\theta) \sim N\left(\mu_j^*(\theta^\prime) - \mu_j^*(\theta), k_j^*(\theta^\prime) + k_j^*(\theta) - 2k_j^*(\theta^\prime, \theta)\right)$$
+
+$$T^*_j(\theta^\prime) - T^*_j(\theta) \sim \mathcal{N}\left(\mu_j^*(\theta^\prime) - \mu_j^*(\theta), k_j^*(\theta^\prime) + k_j^*(\theta) - 2k_j^*(\theta^\prime, \theta)\right)$$
 In fact, under the GP approximations, the whole exponential term in $\alpha(\theta, \theta^\prime)$ is log-normal
 
-$$\exp\left\{ -\frac{1}{2} \sum_{j = 1}^{p} \left(\frac{T^*_j(\theta^\prime) - T^*_j(\theta)}{\sigma_j^2}\right)\right\} \sim \text{LN}$$
+$$\exp\left\{ -\frac{1}{2} \sum_{j = 1}^{p} \left(\frac{T^*_j(\theta^\prime) - T^*_j(\theta)}{\sigma_j^2}\right)\right\} \sim \mathcal{LN}$$
 so we could consider an analytical approximation like
+
 $$
 \hat{\alpha}(\theta, \theta^\prime) = \frac{\pi_0(\theta^\prime)q(\theta^\prime, \theta)}{\pi_0(\theta)q(\theta, \theta^\prime)} \mathbb{E} \left[\exp\left\{ -\frac{1}{2} \sum_{j = 1}^{p} \left(\frac{T^*_j(\theta^\prime) - T^*_j(\theta)}{\sigma_j^2}\right)\right\}\right]
 $$
+
 When we instead emulate the log of the $T_j$ using a GP, these analytical expressions go away, but the sampling approach still works. 
 
 ### Updating $\Sigma$
 Recall that the observation variances are updated by sampling 
-$$\sigma_j^2 \sim IG(a_j + N_j/2, b_j + T_j(\theta)/2)$$
+$$\sigma_j^2 \sim \mathcal{IG}(a_j + N_j/2, b_j + T_j(\theta)/2)$$
 The current PEcAn approach is to sample $\tilde{T}_j \sim T_j^*(\theta)$ and then sample from the resulting approximate distribution
-$$ \sigma_j^2 \sim IG(a_j + N_j/2, b_j + \tilde{T}_j/2) $$
+$$ \sigma_j^2 \sim \mathcal{IG}(a_j + N_j/2, b_j + \tilde{T}_j/2) $$
 The same procedure can of course be used if we instead emulate the log of $T_j$. 
 
 
@@ -239,17 +264,17 @@ I begin by focusing on a single output $(p = 1)$ for simplicity.
 
 ### Incorporating the Predictive GP Distribution 
 The approximation $T^*(\theta)$ to the sum of squared errors $T(\theta)$ is a stochastic approximation, with 
-distribution $T^*(\theta) \sim N(\mu^*(\theta), k^*(\theta))$. Thus, in evaluating the emulator performance we seek 
+distribution $T^*(\theta) \sim \mathcal{N}(\mu^*(\theta), k^*(\theta))$. Thus, in evaluating the emulator performance we seek 
 to integrate whatever error metric we're using over this randomness. To begin, we consider pointwise measures of error 
 between $T^*(\theta)$ and $T(\theta)$. The natural measure to use here is to evaluate the the predictive density of 
 $T^*(\theta)$ at the point $T(\theta)$:
 
-$$ p_{T^*(\theta)}(T(\theta)) = N(T(\theta)|\mu^*(\theta), k^*(\theta)) = \frac{1}{\sqrt{2\pi k^*(\theta)}} \exp\left(-\frac{(T(\theta) - \mu^*(\theta))^2}{2k^*(\theta)} \right)$$
+$$ p_{T^*(\theta)}(T(\theta)) = \mathcal{N}(T(\theta)|\mu^*(\theta), k^*(\theta)) = \frac{1}{\sqrt{2\pi k^*(\theta)}} \exp\left(-\frac{(T(\theta) - \mu^*(\theta))^2}{2k^*(\theta)} \right)$$
 
 We can also consider predictive density of other functions of $T^*(\theta)$, in order to define specialized error metrics that capture the error in specific use cases of the approximation. For example, note that in the acceptance ratio $\alpha(\theta, \theta^\prime)$, we require an approximation 
 of the difference $T(\theta^\prime) - T(\theta)$. The predictive density of this quantity is given by 
 
-$$ p_{T^*(\theta^\prime) - T^*(\theta)}(T(\theta^\prime) - T(\theta)) = N\left(T(\theta^\prime) - T(\theta)|\mu^*(\theta^\prime) - \mu^*(\theta), k^*(\theta^\prime) + k^*(\theta) - 2k(\theta^\prime, \theta)\right)$$
+$$ p_{T^*(\theta^\prime) - T^*(\theta)}(T(\theta^\prime) - T(\theta)) = \mathcal{N}\left(T(\theta^\prime) - T(\theta)|\mu^*(\theta^\prime) - \mu^*(\theta), k^*(\theta^\prime) + k^*(\theta) - 2k(\theta^\prime, \theta)\right)$$
 
 We can actually extend this idea to derive the distribution of $\alpha^*(\theta, \theta^\prime)$, the approximation of $\alpha(\theta, \theta^\prime)$ resulting from replacing $T$ with $T^*$. Using properties of Gaussians and log-normals we have,
 
